diesel_tests/tests/compile-fail/global/update_requires_left_side_of_eq_to_be_a_column.rs
#[macro_use]
extern crate diesel;

use diesel::*;
use diesel::expression::AsExpression;

table! {
    users {
        id -> Integer,
        name -> VarChar,
    }
}

fn main() {
    use self::users::dsl::*;

    let foo = AsExpression::<types::VarChar>::as_expression("foo");
    let command = update(users).set(foo.eq(name));
    //~^ ERROR Column
}
